[package]
name = "ahtable"
description = "Array Hash Table implementation"
categories = ["data-structures"]
keywords = ["Array", "Hash", "Table"]
readme = "README.md"
version = "0.1.1"
repository = "https://github.com/NattapongSiri/ahtable_rs.git"
authors = ["Nattapong Sirilappanich <s.nattapong@gmail.com>"]
license = "BSD-3-Clause"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twox-hash="^1.5"

[dev-dependencies]
fnv="^1.0"